--- a/index.html
+++ b/index.html
@@ -18,7 +18,12 @@
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-N9M9PG4"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
+
 ga4_x0
+
+<a href="https://ga4x0.netlify.app/"><strong>ga4x0</strong></a>
+<a href="https://ga4x1.netlify.app/">ga4x1</a>
+<a href="https://ga4x2.netlify.app/">ga4x2</a>
 
 </body>
 </html>
